applications/CoSimulationApplication/custom_external_libraries/CoSimIO/co_sim_io/c/co_sim_io_c_model_part.h

typedef struct CoSimIO_Node
{
    void* PtrCppNode;
} CoSimIO_Node;
typedef struct CoSimIO_Element
{
    void* PtrCppElement;
} CoSimIO_Element;
typedef struct CoSimIO_ModelPart
{
    void* PtrCppModelPart;
} CoSimIO_ModelPart;
typedef enum
{
    CoSimIO_Hexahedra3D20,
    CoSimIO_Hexahedra3D27,
    CoSimIO_Hexahedra3D8,
    CoSimIO_Prism3D15,
    CoSimIO_Prism3D6,
    CoSimIO_Pyramid3D13,
    CoSimIO_Pyramid3D5,
    CoSimIO_Quadrilateral2D4,
    CoSimIO_Quadrilateral2D8,
    CoSimIO_Quadrilateral2D9,
    CoSimIO_Quadrilateral3D4,
    CoSimIO_Quadrilateral3D8,
    CoSimIO_Quadrilateral3D9,
    CoSimIO_Tetrahedra3D10,
    CoSimIO_Tetrahedra3D4,
    CoSimIO_Triangle2D3,
    CoSimIO_Triangle2D6,
    CoSimIO_Triangle3D3,
    CoSimIO_Triangle3D6,
    CoSimIO_Line2D2,
    CoSimIO_Line2D3,
    CoSimIO_Line3D2,
    CoSimIO_Line3D3,
    CoSimIO_Point2D,
    CoSimIO_Point3D
} CoSimIO_ElementType;