applications/CoSimulationApplication/custom_external_libraries/CoSimIO/co_sim_io/c/co_sim_io_c_info.h

typedef struct CoSimIO_Info
{
    void* PtrCppInfo;
} CoSimIO_Info;
CO_SIM_IO_NODISCARD CoSimIO_Info CoSimIO_CreateInfo(void);
CO_SIM_IO_NODISCARD CoSimIO_Info CoSimIO_CopyInfo(const CoSimIO_Info I_Info);
int CoSimIO_FreeInfo(CoSimIO_Info I_Info);
int CoSimIO_Info_Has(const CoSimIO_Info I_Info, const char* I_Key);
void CoSimIO_Info_Erase(const CoSimIO_Info I_Info, const char* I_Key);
void CoSimIO_Info_Clear(const CoSimIO_Info I_Info);
int CoSimIO_Info_Size(const CoSimIO_Info I_Info);
int CoSimIO_Info_GetInt(const CoSimIO_Info I_Info, const char* I_Key);
double CoSimIO_Info_GetDouble(const CoSimIO_Info I_Info, const char* I_Key);