applications/CoSimulationApplication/custom_external_libraries/CoSimIO/co_sim_io/fortran/co_sim_io.f90

!     ______     _____ _           ________
!    / ____/___ / ___/(_)___ ___  /  _/ __ |
!   / /   / __ \\__ \/ / __ `__ \ / // / / /
!  / /___/ /_/ /__/ / / / / / / // // /_/ /
!  \____/\____/____/_/_/ /_/ /_/___/\____/
!  Kratos CoSimulationApplication
!
!  License:         BSD License, see license.txt
!
!  Main authors:    Philipp Bucher (https://github.com/philbucher), Ankit Nanda(https://github.com/Ankit-Nanda-altair)
!

      MODULE co_sim_io
          USE, INTRINSIC :: ISO_C_BINDING
          IMPLICIT NONE
          
          !START: co_sim_io_c_info.h structures
          TYPE, BIND (C) ::  CoSimIO_Info
              TYPE(c_ptr)      :: PtrCppInfo              
          END TYPE CoSimIO_Info
          
          !END: co_sim_io_c_info.h structures
          
          !START: co_sim_io_c_model_part.h structures
          TYPE, BIND (C) ::  CoSimIO_Node
              TYPE(c_ptr)      :: PtrCppNode              
          END TYPE CoSimIO_Node
          
          TYPE, BIND (C) ::  CoSimIO_Element
              TYPE(c_ptr)      :: PtrCppElement              
          END TYPE CoSimIO_Element
          
          TYPE, BIND (C) ::  CoSimIO_ModelPart
              TYPE(c_ptr)      :: PtrCppModelPart              
          END TYPE CoSimIO_ModelPart
          
          ENUM, BIND(C) 
                ENUMERATOR:: CoSimIO_ConnectionStatus = -1
                ENUMERATOR:: CoSimIO_NotConnected
                ENUMERATOR:: CoSimIO_Connected
                ENUMERATOR:: CoSimIO_Disconnected
                ENUMERATOR:: CoSimIO_ConnectionError
                ENUMERATOR:: CoSimIO_DisconnectionError
          END ENUM

          ENUM, BIND(C)  
              ENUMERATOR:: CoSimIO_ElementType = -1
              ENUMERATOR:: CoSimIO_Hexahedra3D20
              ENUMERATOR:: CoSimIO_Hexahedra3D27
              ENUMERATOR:: CoSimIO_Hexahedra3D8
              ENUMERATOR:: CoSimIO_Prism3D15
              ENUMERATOR:: CoSimIO_Prism3D6
              ENUMERATOR:: CoSimIO_Pyramid3D13
              ENUMERATOR:: CoSimIO_Pyramid3D5
              ENUMERATOR:: CoSimIO_Quadrilateral2D4
              ENUMERATOR:: CoSimIO_Quadrilateral2D8
              ENUMERATOR:: CoSimIO_Quadrilateral2D9
              ENUMERATOR:: CoSimIO_Quadrilateral3D4
              ENUMERATOR:: CoSimIO_Quadrilateral3D8
              ENUMERATOR:: CoSimIO_Quadrilateral3D9
              ENUMERATOR:: CoSimIO_Tetrahedra3D10
              ENUMERATOR:: CoSimIO_Tetrahedra3D4
              ENUMERATOR:: CoSimIO_Triangle2D3
              ENUMERATOR:: CoSimIO_Triangle2D6
              ENUMERATOR:: CoSimIO_Triangle3D3
              ENUMERATOR:: CoSimIO_Triangle3D6
              ENUMERATOR:: CoSimIO_Line2D2
              ENUMERATOR:: CoSimIO_Line2D3
              ENUMERATOR:: CoSimIO_Line3D2
              ENUMERATOR:: CoSimIO_Line3D3
              ENUMERATOR:: CoSimIO_Point2D
              ENUMERATOR:: CoSimIO_Point3D
          END ENUM
          !END: co_sim_io_c_model_part.h structures
      
          INTERFACE
              
          ! START: co_sim_io_c.h interface functions and subroutines
              TYPE(CoSimIO_Info) FUNCTION CoSimIO_Hello() BIND(C, NAME="CoSimIO_Hello")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
              END FUNCTION CoSimIO_Hello
      
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_Connect (I_Settings) BIND(C, NAME="CoSimIO_Connect")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Settings
              END FUNCTION CoSimIO_Connect

              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_Disconnect (I_Info) BIND(C, NAME="CoSimIO_Disconnect")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_Disconnect

              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ImportData (I_Info, O_Size, O_Data) BIND(C, NAME="CoSimIO_ImportData")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE                                     :: I_Info
                  INTEGER(KIND=c_int),pointer                                   :: O_Size
                  REAL(KIND=c_double),pointer,DIMENSION(:)                      :: O_Data
              END FUNCTION CoSimIO_ImportData      
      
      
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ImportData_fortran (I_Info, O_Size, O_Data) 
     &                                                        BIND(C, NAME="CoSimIO_ImportData_fortran")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE                                     :: I_Info
                  INTEGER(KIND=c_int),VALUE                                   :: O_Size
                  REAL(KIND=c_double),pointer,DIMENSION(:)                      :: O_Data
              END FUNCTION CoSimIO_ImportData_fortran    
          
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ExportData (I_Info, I_Size, I_Data) BIND(C, NAME="CoSimIO_ExportData")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE         :: I_Info
                  INTEGER(KIND = c_int), VALUE      :: I_Size
                  REAL(KIND=c_double),DIMENSION(*)                :: I_Data
              END FUNCTION CoSimIO_ExportData              
          
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ImportMesh (I_Info, O_ModelPart) BIND(C, NAME="CoSimIO_ImportMesh")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart, CoSimIO_Info 
                  TYPE(CoSimIO_Info), VALUE             :: I_Info
                  TYPE(CoSimIO_ModelPart), VALUE        :: O_ModelPart
              END FUNCTION CoSimIO_ImportMesh             
          
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ExportMesh (I_Info, I_ModelPart) BIND(C, NAME="CoSimIO_ExportMesh")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_ModelPart, CoSimIO_Info 
                  TYPE(CoSimIO_Info), VALUE             :: I_Info
                  TYPE(CoSimIO_ModelPart), VALUE        :: I_ModelPart
              END FUNCTION CoSimIO_ExportMesh
      
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ImportInfo (I_Info) BIND(C, NAME="CoSimIO_ImportInfo")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_ImportInfo
      
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_ExportInfo (I_Info) BIND(C, NAME="CoSimIO_ExportInfo")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_ExportInfo
        
               INTEGER(KIND=C_INT) FUNCTION CoSimIO_Register (I_Info, I_FunctionPointer) BIND(C, NAME="CoSimIO_Register")
                   USE, INTRINSIC :: ISO_C_BINDING
                   IMPORT CoSimIO_Info
                   TYPE(CoSimIO_Info), VALUE    :: I_Info
                   TYPE(C_FUNPTR), VALUE        :: I_FunctionPointer
               END FUNCTION CoSimIO_Register
      
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_Run (I_Info) BIND(C, NAME="CoSimIO_Run")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_Run
      
      
              TYPE(c_ptr) FUNCTION CoSimIO_Malloc (size)
                  USE, INTRINSIC :: ISO_C_BINDING
                  REAL(KIND=c_double), VALUE :: size
              END FUNCTION CoSimIO_Malloc
            
            
              SUBROUTINE CoSimIO_Free(ptr_h) BIND(C, NAME='CoSimIO_Free')
                  USE, INTRINSIC :: ISO_C_BINDING
                  !IMPORT CoSimIO_Info
                  TYPE(c_ptr),INTENT(IN), VALUE :: ptr_h              
              END SUBROUTINE CoSimIO_Free
      ! END: co_sim_io_c.h interface
      
      !START: co_sim_io_c_info.h interface
              TYPE(CoSimIO_Info) FUNCTION CoSimIO_CreateInfo() BIND(C, NAME="CoSimIO_CreateInfo")  
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
              END FUNCTION CoSimIO_CreateInfo
      
              TYPE(CoSimIO_Info)  FUNCTION CoSimIO_CopyInfo (I_Info) BIND(C, NAME="CoSimIO_CopyInfo")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_CopyInfo
      
              INTEGER(KIND=c_int)  FUNCTION CoSimIO_FreeInfo (I_Info) BIND(C, NAME="CoSimIO_FreeInfo")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_FreeInfo          
            
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_Info_Has (I_Info, I_Key) BIND(C, NAME="CoSimIO_Info_Has")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE           :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*)       :: I_Key
              END FUNCTION CoSimIO_Info_Has
            
            
              SUBROUTINE CoSimIO_Info_Erase(I_Info, I_Key) BIND(C, NAME='CoSimIO_Info_Erase')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN), VALUE           :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*) , INTENT(IN)      :: I_Key            
              END SUBROUTINE CoSimIO_Info_Erase
            
            
              SUBROUTINE CoSimIO_Info_Clear(I_Info) BIND(C, NAME='CoSimIO_Info_Clear')
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), INTENT(IN) , VALUE          :: I_Info          
              END SUBROUTINE CoSimIO_Info_Clear
      
              INTEGER(KIND=c_int)  FUNCTION CoSimIO_Info_Size (I_Info) BIND(C, NAME="CoSimIO_Info_Size")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE      :: I_Info
              END FUNCTION CoSimIO_Info_Size            
            
      
              INTEGER(KIND=c_int) FUNCTION CoSimIO_Info_GetInt (I_Info, I_Key) BIND(C, NAME="CoSimIO_Info_GetInt")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE                                :: I_Info
                  CHARACTER(len=1, KIND=c_char), DIMENSION(*)              :: I_Key
              END FUNCTION CoSimIO_Info_GetInt            
            
      
              REAL(KIND=c_double) FUNCTION CoSimIO_Info_GetDouble (I_Info, I_Key) BIND(C, NAME="CoSimIO_Info_GetDouble")
                  USE, INTRINSIC :: ISO_C_BINDING
                  IMPORT CoSimIO_Info
                  TYPE(CoSimIO_Info), VALUE                               :: I_Info
                  CHARACTER(len=1, KIND=c_char) , DIMENSION(*)            :: I_Key
              END FUNCTION CoSimIO_Info_GetDouble           
            
